2000-03-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/saveimage.m: Add comment to file saying who created it and
	when it was created.  Suggested by Stephen Eglen
	<stephen@cogsci.ed.ac.uk>.

2000-03-21  Paul Kienzle <pkienzle@kienzle.powernet.co.uk>

	* polynomial/polyreduce.m: Simplify by looking for the first
	non-zero element rather than the last of the first set of zero
	elements.

	* plot/__pltopt1__.m: Accept "--", "-.", and ":" line styles.

2000-03-21  Kai Habel <kahacjde@calvados.zrz.TU-Berlin.DE>

	* image/saveimage.m: Swap black and white colormaps so zero is
	displayed as black and 1 is displayed as white.
	Fix indexing bug in ppm case.

2000-03-06  Stephen Eglen  <stephen@anc.ed.ac.uk>

	* statistics/tests/kolmogorov_smirnov_test_2.m: Account for ties
	between the two distributions (took same approach as ks.test() in R.)

2000-02-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/bode.m: Temporarily disable automatic_replot.

2000-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (clean): Also remove gethelp.

	* specfun/erfinv.m: Use z_new in convergence test, not z_old.

2000-02-11  Georg Thimm <mgeorg@SGraphicsWS1.mpe.ntu.edu.sg>

	* set/create_set.m: Use find to avoid while loop.

2000-02-11  Stephen Eglen <stephen@cogsci.ed.ac.uk>

	* plot/hist.m: New optional third argument.

2000-02-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Use octave-bug script with version
	number appended.

2000-02-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* gethelp.cc: Sprinkle with std:: qualifier.

2000-01-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/saveimage.m: Delete some debugging code.

2000-01-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* signal/sinc.m: Avoid reshaping.

	* image/rgb2ind.m: No longer needs to reset do_fortran_indexing.
	* image/ind2rgb.m: Ditto.
	* image/ind2gray.m: Ditto.
	* general/reshape.m: Ditto.  Also no longer needs to reset
	implicit_str_to_num_ok.
