@@ -40,7 +40,8 @@ function top_title (text)
   if (isstr (text))
     gset bottom_title;
     gset title;
-    eval (sprintf ("gset top_title \"%s\"", text));
+    eval (sprintf ("gset top_title \"%s\"",
+		   undo_string_escapes (undo_string_escapes (text))));
   else
     error ("error: top_title: text must be a string");
   endif
