@@ -1,5 +1,8 @@
 2000-03-22  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* plot/title.m, plot/bottom_title.m, plot/top_title.m: 
+	Undo string escapes in text twice(!) before sending to gnuplot.
+
 	* image/saveimage.m: Add comment to file saying who created it and
 	when it was created.  Suggested by Stephen Eglen
 	<stephen@cogsci.ed.ac.uk>.
